fixed search popup overlap problem + added differentiation colour + line

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -112,7 +112,24 @@ p {
     cursor: pointer;
     margin-right: 5px;
 }
-
+.contact-button {
+    background-color: #87b2e4;
+    padding-top: 6px;
+    border-radius: 24px;
+    border: none;
+    cursor: pointer;
+    margin-right: 5px;
+    z-index: 3;
+}
+.group-button {
+    background-color: #6baffd;
+    padding-top: 6px;
+    border-radius: 24px;
+    border: none;
+    cursor: pointer;
+    margin-right: 5px;
+    z-index: 3;
+}
 .base-button:hover {
     opacity: 0.8;
 }
@@ -288,7 +305,7 @@ members {
 .form-center {
     margin-left: 2rem;
     margin-left: 50%;
-    /* position: absolute;  */
+    /* position: relative;  */
 }
 
 .menu-bars {
